# SCONewsBot

./: .gitignore  Dockerfile  docker-compose.yml  processed_links.txt  pyproject.toml
admin_panel/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
admin_panel/config/: settings.py
admin_panel/configpanel/: admin.py  apps.py  models.py  signals.py
admin_panel/configpanel/migrations/: 0001_initial.py  0002_prompt_alter_adjectivetocountry_options_and_more.py  0003_rename_date_created_newsarticle_created_at_and_more.py  0004_alter_newsarticle_link.py  0005_feed_is_active.py
parser_app/: Dockerfile  pyproject.toml
parser_app/src/: main.py
parser_app/src/config/: db.py  logging.py  settings.py
parser_app/src/domain/: models.py
parser_app/src/repositories/: article_repository.py  data_repository.py  feed_repository.py
parser_app/src/schemas/: deepseek.py  feed.py
parser_app/src/services/: deepseek_service.py  telegram_notifier_service.py  text_processor_service.py  wordpress_sender_service.py
parser_app/src/usecases/: article_processor.py  rss_processor.py
parser_app/src/utils/: decarators.py  http_utils.py  rss_utils.py
sandbox/: morph.py
src/: hello.py  main.py
src/ai/: deepseek.py
src/config/: constants.py  logging.py  settings.py
src/integrations/: telegram.py
src/utils/: http_utils.py  rss_utils.py  text_processing.py
